--- a/repo_helper.yml
+++ b/repo_helper.yml
@@ -15,14 +15,13 @@ enable_tests: false
 enable_docs: false
 on_pypi: false
 use_whey: true
+requires_python: "3.4.0"
 
 exclude_files:
   - pre-commit
 
   # Versions to run tests for
 python_versions:
- - '3.4'
- - '3.5'
  - '3.6'
  - '3.7'
  - '3.8'
