--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@
 #     * pytest
 
 [tox]
-envlist = py34, py35, py36, py37, py38, py39, py310, mypy, build
+envlist = py36, py37, py38, py39, py310, mypy, build
 skip_missing_interpreters = True
 isolated_build = True
 requires =
@@ -22,7 +22,7 @@ requires =
     tox-pip-version>=0.0.7
 
 [envlists]
-test = py34, py35, py36, py37, py38, py39, py310
+test = py36, py37, py38, py39, py310
 qa = mypy, lint
 
 [testenv]
@@ -81,7 +81,7 @@ deps = mypy==0.910
 commands = mypy circuitpython_at24c32 {posargs}
 
 [testenv:pyup]
-basepython = python3.4
+basepython = python3.6
 skip_install = True
 ignore_errors = True
 changedir = {toxinidir}
@@ -107,7 +107,7 @@ inline-quotes = "
 multiline-quotes = """
 docstring-quotes = """
 count = True
-min_python_version = 3.4
+min_python_version = 3.4.0
 unused-arguments-ignore-abstract-functions = True
 unused-arguments-ignore-overload-functions = True
 unused-arguments-ignore-magic-methods = True
